enlazando jQuery y añadiendo contenido con jQuery al HTML

--- a/index.html
+++ b/index.html
@@ -10,19 +10,8 @@
 </head>
 
 <body>
-  <section>
-    <h1>Bienvenidas a jQuery</h1>
-    <p>jQuery es una librería de JS que nos sirve para Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
-      accusamus dicta expedita delectus tempora aspernatur quos sed eos. Nesciunt corrupti harum voluptatem! Quibusdam assumenda
-      dolor ducimus excepturi ullam, quisquam ea.</p>
-
-    <h3>Versiones de jQuery</h3>
-    <ul>
-      <li>jQuery Core 3.2.1</li>
-      <li>jQuery Core 2.2.4</li>
-      <li>jQuery Core 1.12.4</li>
-    </ul>
-  </section>
+    <h1>Bienvenidas a HTML</h1>
+    <h1 id="text-jquery"></h1>
 
   <script src="vendors/js/jquery.min.js"></script>
   <script src="js/app.js"></script>
