añadiendo práctica con selectores

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <section>
-    <h1>Bienvenidas a jQuery</h1>
-    <p>jQuery es una librería de JS que nos sirve para Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
+    <h1 class="title">Bienvenidas a jQuery</h1>
+    <p id="info">jQuery es una librería de JS que nos sirve para Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
       accusamus dicta expedita delectus tempora aspernatur quos sed eos. Nesciunt corrupti harum voluptatem! Quibusdam assumenda
       dolor ducimus excepturi ullam, quisquam ea.</p>
 
-    <h3>Versiones de jQuery</h3>
+    <h3 class="title">Versiones de jQuery</h3>
     <ul>
       <li>jQuery Core 3.2.1</li>
       <li>jQuery Core 2.2.4</li>
